unpackaged/main/default/objects/litify__lu_Litify_Product__c/litify__lu_Litify_Product__c.object-meta.xml
<CustomObject>
    <description>Used in the trigger framework to track which products need triggers across code bases.</description>
    <label>Litify Product</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Litify Products</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>