unpackaged/main/default/objects/litify__lu_Litify_Product__c/fields/litify__lu_Callable_Trigger_Handler__c.field-meta.xml
<CustomField>
    <fullName>litify__lu_Callable_Trigger_Handler__c</fullName>
    <description>The apex class that houses the trigger handler for this product.</description>
    <label>Callable Trigger Handler</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>