unpackaged/main/default/objects/litify__lu_Litify_Product__c/fields/litify__lu_Catch_Exceptions__c.field-meta.xml
<CustomField>
    <fullName>litify__lu_Catch_Exceptions__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Catch Exceptions</label>
    <type>Checkbox</type>
</CustomField>