unpackaged/main/default/objects/litify__lu_Litify_Product__c/fields/litify__lu_Description__c.field-meta.xml
<CustomField>
    <fullName>litify__lu_Description__c</fullName>
    <description>The description of the product.</description>
    <label>Body</label>
    <length>1023</length>
    <type>LongTextArea</type>
</CustomField>