unpackaged/main/default/objects/litify__lu_Litify_Product__c/fields/litify__lu_Product_Label__c.field-meta.xml
<CustomField>
    <fullName>litify__lu_Product_Label__c</fullName>
    <label>Product Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>