unpackaged/main/default/objects/litify__lu_Litify_Product__c/fields/litify__lu_Triggers_Enabled__c.field-meta.xml
<CustomField>
    <fullName>litify__lu_Triggers_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Triggers Enabled</label>
    <type>Checkbox</type>
</CustomField>